<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rate_page_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:background="#084563">

        <ImageView
            android:id="@+id/buttonBack"
            android:layout_width="60dp"
            android:layout_height="83dp"
            app:srcCompat="@drawable/arrow_white"
            android:layout_gravity="top|start"
            android:layout_marginStart="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top|center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:fontFamily="@font/libre_baskerville"
                android:gravity="center"
                android:text="@string/rating_and_comment"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="96dp"
                android:layout_height="20dp"
                android:layout_gravity="top|center"
                android:fontFamily="@font/libre_baskerville"
                android:gravity="center"
                android:text="@string/rating"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_rating"
            android:layout_width="270dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_margin="130dp"
            android:hint="@string/enter_name_and_surname_descr"
            android:inputType="text"
            android:fontFamily="@font/libre_baskerville"
            android:textAlignment="center"
            android:background="@drawable/frame"
            />

        <FrameLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical">
                <Button
                    android:id="@+id/button1"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:alpha="0.9"
                    android:layout_gravity="center"
                    android:background="@drawable/buttons"
                    android:backgroundTint="@color/primaryColor"
                    android:text="@string/_1_out_of_5"
                    android:textColor="#062635"
                    android:fontFamily="@font/libre_baskerville"/>

                <Button
                    android:id="@+id/button2"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:alpha="0.9"
                    android:layout_gravity="center"
                    android:background="@drawable/buttons"
                    android:backgroundTint="@color/primaryColor"
                    android:text="@string/_2_out_of_5"
                    android:textColor="#062635"
                    android:fontFamily="@font/libre_baskerville"/>
                <Button
                    android:id="@+id/button3"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:alpha="0.9"
                    android:layout_gravity="center"
                    android:background="@drawable/buttons"
                    android:backgroundTint="@color/primaryColor"
                    android:text="@string/_3_out_of_5"
                    android:textColor="#062635"
                    android:fontFamily="@font/libre_baskerville"/>
                <Button
                    android:id="@+id/button4"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:alpha="0.9"
                    android:layout_gravity="center"
                    android:background="@drawable/buttons"
                    android:backgroundTint="@color/primaryColor"
                    android:text="@string/_4_out_of_5"
                    android:textColor="#062635"
                    android:fontFamily="@font/libre_baskerville"/>
                <Button
                    android:id="@+id/button5"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:alpha="0.9"
                    android:layout_gravity="center"
                    android:background="@drawable/buttons"
                    android:backgroundTint="@color/primaryColor"
                    android:text="@string/_5_out_of_5"
                    android:textColor="#062635"
                    android:fontFamily="@font/libre_baskerville"/>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>