<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/comrat_page_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


...
        android:layout_gravity="center_vertical"
        android:layout_marginTop="80dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/rateExperience"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="80dp"
            android:layout_marginTop="230dp"
            android:alpha="0.9"
            android:background="@drawable/buttons"
...
