<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ss_guide_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <FrameLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:background="@color/primaryColor"
        >

        <ImageView
            android:id="@+id/buttonBack"
            android:layout_width="60dp"
            android:layout_height="83dp"
            app:srcCompat="@drawable/arrow_white"
            android:layout_gravity="top|start"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/title_template"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="top|center"
            android:fontFamily="@font/libre_baskerville"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:text="@string/SSing_name"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </FrameLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_height="270dp"
        android:layout_width="355dp"
        android:layout_marginTop="21dp"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:background="@drawable/frame"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_layout_ssguide"
            android:layout_width="355dp"
            android:layout_height="320dp"
            android:orientation="vertical"
            android:background="@drawable/frame"
            android:layout_gravity="center"
            android:layout_marginTop="22dp">

            <TextView
                android:id="@+id/titleOfSSeing"
                android:layout_width="330dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/libre_baskerville"
                android:gravity="start"
                android:text="@string/SSing_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/buildYear"
                android:layout_width="330dp"
                android:layout_height="20dp"
                android:layout_gravity="top|center"
                android:fontFamily="@font/libre_baskerville"
                android:gravity="start"
                android:text="@string/built"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/briefHistory_title"
                android:layout_width="330dp"
                android:layout_height="20dp"
                android:layout_gravity="top|center"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/libre_baskerville"
                android:gravity="start"
                android:text="@string/brief_history"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/briefHistory"
                android:layout_width="330dp"
                android:layout_height="190dp"
                android:layout_gravity="top|center"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/libre_baskerville"
                android:gravity="start"
                android:textColor="@color/black"
                android:textSize="18sp" />


        </LinearLayout>

    </FrameLayout>


</LinearLayout>